# dftatom

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  LICENSE  Makefile.manual  README.rst  spkg-install
.github/workflows/: ci.yml
cmake/: FindLapack.cmake  FindNumPy.cmake  FindPython.cmake  UserOverride.cmake
dftatom/: CMakeLists.txt  __init__.py  test_runner
dftatom/lib/: CMakeLists.txt  c_dftatom.pxd  dftatom_wrapper.pyx
dftatom/tests/: test_dftatom.py
examples/: atom_B.py  atom_U.py  atom_pseudo.py  sn.param
src/: CMakeLists.txt  Makefile.manual  c_dftatom.f90  c_dftatom.h  constants.f90  dft.f90  dft_data.f90  dftatom.f90  drivers.f90  energies.f90  mesh.f90  mixings.f90  ode1d.f90  ode1d_other.f90  rdirac.f90  rdirac_other.f90  reigen.f90  rpoisson.f90  rpoisson_other.f90  rschroed.f90  rschroed_other.f90  states.f90  types.f90  utils.f90
tests/: CMakeLists.txt  Makefile.manual  Makefile.manual.mk
tests/Z92n7all/: CMakeLists.txt  Z92_nonrel.f90  Z92_nonrel_100.f90  Z92_rel.f90  Z92_rel_100.f90  Z92_tf.f90
tests/atom_U/: CMakeLists.txt  C_atom_U.c  F_atom_U.f90  Makefile.manual  uraninum_rlda.f90
tests/bench_poisson/: CMakeLists.txt  Plots.ipynb  bench_poisson.f90  test_poisson_kernels.f90
tests/boron/: CMakeLists.txt  boron_nonrel.f90  boron_rel.f90
tests/double_min/: CMakeLists.txt  N_conv.f90  fd.f90  interpolation.f90  lapack.f90  potential_table.txt  rmin_conv.f90
tests/enrichment/: CMakeLists.txt  Plot Enrichment.ipynb  enrichment.f90  enrichment_ks.f90
tests/hydrogen/: CMakeLists.txt  hydrogen.f90
tests/lda/: CMakeLists.txt  Makefile.manual  Makefile_6.manual  adjust.py  calculate_n.py  conv_lda.f90  conv_lda_6.f90  plot_prec_n.py
tests/mixings/: CMakeLists.txt  mixings.f90
tests/oscillator/: CMakeLists.txt  osc_nonrel.f90  osc_rel.f90
tests/pseudopotential/: CMakeLists.txt  Opium run.ipynb  Plot potential.ipynb  nonrel_dft_externalpot.f90  potential.txt  sn.param  vloc_nonrel.f90  vloc_nonrel_dft.f90  vloc_nonrel_dft_hyp.f90
tests/rlda/: CMakeLists.txt  Makefile.manual  a.py  b.py  calculate_n.py  conv_rlda.f90  n_study.py  uraninum_rlda.f90
tests/uranium/: CMakeLists.txt  plot_rho.py  uranium_nonrel.f90  uranium_rel.f90  uranium_tf.f90
tests/well/: CMakeLists.txt  optimize.f90  special.f90  well_nonrel.f90  well_rel.f90
utils/: dependency_graph.dot  fparser  generate
