add_subdirectory(mixings)
add_subdirectory(hydrogen)
add_subdirectory(boron)
add_subdirectory(Z92n7all)
add_subdirectory(uranium)
add_subdirectory(lda)
add_subdirectory(rlda)
add_subdirectory(atom_U)
add_subdirectory(oscillator)
add_subdirectory(well)
add_subdirectory(pseudopotential)
if (WITH_LAPACK)
    add_subdirectory(double_min)
endif ()
